Update in the last excercises

--- a/week11tasks/in_class_assignment.html
+++ b/week11tasks/in_class_assignment.html
@@ -7585,8 +7585,8 @@ You can read the description here:
 </pre></div>
 <ul>
 <li>Run the test from the terminal</li>
-<li>Re-write the file in such a way that the launch is given by the command <code>python -m test_tmp</code></li>
-<li>What is the purpose of the command <code>python -m test_tmp -v</code></li>
+<li>Re-write the file in such a way that the launch is given by the command <code>python -m unittest test_tmp</code></li>
+<li>What is the purpose of the command <code>python -m unittest test_tmp -v</code></li>
 <li>Add <strong>two</strong> tests into the file that fail</li>
 <li>Why did your tests fail?</li>
 </ul>
